macros/tests/compile-fail/derive_on_enum.rs
use gluesql_macros::FromGlueRow;

#[derive(FromGlueRow)]
enum E {
    A,
}
