macros/tests/compile-fail/derive_on_enum.stderr
error: FromGlueRow can only be derived for structs
 --> tests/compile-fail/derive_on_enum.rs:4:1
  |
4 | enum E {
  | ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile-fail/derive_on_enum.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/derive_on_enum.rs`
